# Xonix

./: .gitignore  CMakeLists.txt  README.md
data/: leaderboard.txt  themes.txt
include/core/: auth.h  difficulty.h  leaderboard.h  matchmaking.h  multiplayer.h  player.h  playerManager.h  saveGame.h  saveGameManager.h  theme.h  themeInventory.h
include/screens/: endGameScreen.h  friendsScreen.h  gameRoomScreen.h  gameScreen.h  inventoryScreen.h  leaderboardScreen.h  loginScreen.h  mainMenu.h  multiplayerEndGameScreen.h  multiplayerGameScreen.h  multiplayerPauseScreen.h  pauseScreen.h  profileScreen.h  registerScreen.h  savedGamesScreen.h  startMenuScreen.h
include/ui/: button.h  textBox.h
src/: main.cpp
src/core/: auth.cpp  leaderboard.cpp  matchmaking.cpp  multiplayer.cpp  player.cpp  playerManager.cpp  saveGame.cpp  saveGameManager.cpp  theme.cpp  themeInventory.cpp
src/screens/: endGameScreen.cpp  friendsScreen.cpp  gameRoomScreen.cpp  gameScreen.cpp  inventoryScreen.cpp  leaderboardScreen.cpp  loginScreen.cpp  mainMenu.cpp  multiplayerEndGameScreen.cpp  multiplayerGameScreen.cpp  multiplayerPauseScreen.cpp  pauseScreen.cpp  profileScreen.cpp  registerScreen.cpp  savedGamesScreen.cpp  startMenuScreen.cpp
src/ui/: button.cpp  textBox.cpp
